# blog-engine-prototype

./: .gitignore  .prettierignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  NOTES.md  README.md  compose.all.yaml  compose.backend-node.yaml  compose.backend-rust.yaml  compose.frontend-svelte.yaml  compose.prod.yaml  compose.yaml  mise.toml  package.json  pnpm-lock.yaml
.claude/: ARCHITECTURE.md  CLAUDE.md
.claude/specs/: 0001-astro-preview-design.md  0002-blog-engine-agent-design-spec.md  0003-architecture-consolidation.md  0004-websocket-agent-protocol.md
admin-cms-app/backend-node/: .env.test  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  README.md  package.json  pnpm-lock.yaml  tsconfig.json
admin-cms-app/backend-node/codegen/: schemas.hbs
admin-cms-app/backend-node/src/: app.test.ts  app.ts  generated-api-types.ts  generated-schemas.test.ts  generated-schemas.ts  server.ts  types.ts
admin-cms-app/backend-node/src/handlers/: healthz.ts  sites.ts
admin-cms-app/backend-rust/: Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md
admin-cms-app/backend-rust/src/: lib.rs  main.rs
admin-cms-app/frontend-react/: .gitignore  .prettierignore  .prettierrc  Dockerfile.dev  Dockerfile.prod  orval.config.ts  package.json  pnpm-lock.yaml  react-router.config.ts  vite.config.ts  vitest.config.ts
admin-cms-app/frontend-react/src/: generated-api.ts  root.tsx  test-setup.ts
admin-cms-app/frontend-react/src/components/: Footer.spec.tsx  Footer.tsx
admin-cms-app/frontend-react/src/lib/api/: fetch-with-base-url.ts
admin-cms-app/frontend-react/src/lib/test/: render-with-providers.tsx
admin-cms-app/frontend-react/src/routes/: home.spec.tsx  home.tsx
admin-cms-app/frontend-svelte/: Dockerfile.dev  Dockerfile.prod  README.md  orval.config.ts  package.json  pnpm-lock.yaml  svelte.config.ts  vite.config.ts
admin-cms-app/frontend-svelte/src/: generated-api.ts
admin-cms-app/frontend-svelte/src/lib/api/: fetch-with-base-url.ts
admin-cms-app/frontend-svelte/src/lib/components/: footer.svelte  footer.svelte.spec.ts
admin-cms-app/frontend-svelte/src/lib/test/: QueryWrapper.svelte  page-with-provider.svelte
admin-cms-app/frontend-svelte/src/lib/test/mocks/: env.ts
admin-cms-app/frontend-svelte/src/routes/: +layout.svelte  +page.svelte  layout.css  page.svelte.spec.ts
admin-protocol/: Cargo.toml
admin-protocol/src/: lib.rs
astro-server/: Dockerfile  management-api.mjs
astro-supervisor/: .env.example  Cargo.toml  Dockerfile.dev  README.md
astro-supervisor/src/: config.rs  error.rs  handlers.rs  lib.rs  main.rs  state.rs  telemetry.rs  ws_client.rs
astro-supervisor/src/handlers/: healthz.rs  preview.rs  sites.rs
backend/: .env.example  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md
backend/src/: app.rs  astro.rs  config.rs  fsm.rs  handlers.rs  lib.rs  main.rs  routes.rs  state.rs  telemetry.rs  types.rs  ws.rs
backend/src/astro/: build.rs  error.rs  preview.rs  sites.rs
backend/src/fsm/: preview.rs  site.rs
backend/src/handlers/: apidoc.rs  commands.rs  healthz.rs  sites.rs  supervisor.rs
backend/src/ws/: dispatch.rs  socket.rs
backend/tests/: e2e_healthz_test.rs  e2e_ping_pong.rs  ws_protocol_test.rs
blog-engine-agent/: Cargo.toml
blog-engine-agent/src/: error.rs  handlers.rs  lib.rs  main.rs  state.rs
blog-engine-agent/src/handlers/: sites.rs
frontend/: .env.test  .gitignore  .prettierrc  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Dockerfile.dev  Dockerfile.prod  README.md  orval.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
frontend/src/: app.html  generated-api.ts
frontend/src/lib/api/: fetch-with-base-url.ts
frontend/src/lib/components/: footer.svelte  footer.svelte.spec.ts
frontend/src/lib/components/font-selector/: font-names.ts  font-selector.svelte
frontend/src/lib/components/theme-selector/: color-swatch.svelte  theme-names.ts  theme-selector.svelte
frontend/src/lib/state/: font.svelte.ts  socket.svelte.spec.ts  socket.svelte.ts
frontend/src/lib/test/: footer-with-provider.svelte
frontend/src/lib/test/mocks/: env.ts  socket.ts
frontend/src/lib/types/: bindings.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css  page.svelte.spec.ts
integration-tests/: package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json
integration-tests/tests/: sites.spec.ts  smoke.spec.ts
open-api-contracts/: api.yaml
