[package]
name = "astro-supervisor"
version = "0.0.1"
edition = "2024"

[[bin]]
name = "astro-supervisor"
path = "src/main.rs"

[lib]
name = "astro_supervisor"
path = "src/lib.rs"

[dependencies]
hyper = { version = "1", features = ["client", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "http2"] }
http-body-util = "0.1"
bytes = "1"
tokio = { version = "1.52.2", features = ["rt-multi-thread", "macros", "process", "time", "net", "sync"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
admin-protocol = { path = "../admin-protocol" }
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
backon = "1.6.0"
dotenvy = "0.15.7"
envy = "0.4.2"
which = "8.0.2"

[dev-dependencies]
tempfile = "3.27.0"
tracing-test = "0.2"

