[package]
name = "blog-engine-agent"
version = "0.0.1"
edition = "2024"

[[bin]]
  name = "blog-engine-agent"
  path = "src/main.rs"

[[bin]]
name = "gen-open-api-yaml"
path = "src/bin/gen_open_api_yaml.rs"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "process", "time", "net"] }
serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
anyhow = "1.0.102"
thiserror = "2.0.18"
utoipa = { version = "5.4.0", features = ["axum_extras", "auto_into_responses", "yaml"] }
utoipa-axum = "0.2.0"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.22.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }

[dev-dependencies]
tempfile = "3.27.0"

