[package]
name = "backend-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros", "rt"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
chrono = { version = "0.4.43", features = ["serde"] }
uuid = { version = "1.21.0", features = ["v4"] }
utoipa = {  version = "5.4.0", features = ["axum_extras", "auto_into_responses", "yaml"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = {  version = "9.0.2", features = ["axum"] }

[dev-dependencies]
cargo-watch = "8.5.3"
